set-up included

--- a/inst/tutorials/week14/week14.Rmd
+++ b/inst/tutorials/week14/week14.Rmd
@@ -15,7 +15,6 @@ gradethis::gradethis_setup()
 
 data(df_learnr14)
 ```
-
 ## Introduction
 
 Welcome back to the tutorial for week 14! It is the second to last tutorial and as always we will start with some knowledge questions to repeat the lecture. In the coding exercises you will look at the support for the European Union among the citizens of member-states. Good luck and have fun!
@@ -73,7 +72,7 @@ question_text("And what about the average degree of anti-authoritarianism among 
 )
 ```
 
-In the next few tasks, you will go through the steps necessary to calculate the causal effect of EU membership on anti-authoritarian attitudes of the countries` citizens using a difference-in-differences design. In particular, you will examine what the effect of EU accession on anti-authoritarian values was for Romania (treatment unit) compared to Albania (control unit).
+In the next few tasks, you will go through the steps necessary to calculate the causal effect of EU membership on anti-authoritarian attitudes of the countries` citizens using a difference-in-differences design. In particular, you will calculate the causal effect of EU-accession on anti-authoritarian values for Romania (treatment unit) compared to Albania (control unit) assuming that anti-authoritarian attitudes would have developed similarly in both countries in the absence of Romania's EU accession.
 
 Calculate the change in anti-authoritarian values for Romania between 2008-2010 and 1999-2004. Round to two digits after the decimal. 
 
@@ -107,7 +106,15 @@ question_text(
 )
 ```
 
-What is the average treatment effect of EU accession for Romania? Round to two digits after the comma.
+What is the average treatment effect of EU accession for Romania? Based on the two previous exercises you already have everything you need! Alternatively, two items `difference_albania` and `difference_romania` have already been specified for you. Do not forget to round to two digits after the comma.
+
+```{r set-up}
+
+difference_albania <- df_learnr14$cntrymean_antiauth[df_learnr14$countryname == "Albania" & df_learnr14$wave == "2008-2010"] - df_learnr14$cntrymean_antiauth[df_learnr14$countryname == "Albania" & df_learnr14$wave == "1999-2004"]
+
+difference_romania <- df_learnr14$cntrymean_antiauth[df_learnr14$countryname == "Romania" & df_learnr14$wave == "2008-2010"] - df_learnr14$cntrymean_antiauth[df_learnr14$countryname == "Romania" & df_learnr14$wave == "1999-2004"]
+
+```
 
 ```{r exercise4, exercise = TRUE}
 
